staging/src/k8s.io/api/testdata/HEAD/admissionregistration.k8s.io.v1beta1.ValidatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    "10": "11"
  clusterName: "16"
  creationTimestamp: null
  deletionGracePeriodSeconds: 6797158496028726353
  finalizers:
  - "15"
  generateName: "3"
  generation: 5828590068104375683
  hashkey: 2234230302359329354
  labels:
    "8": "9"
  managedFields:
  - apiVersion: "18"
    fields:
      "19":
        "20": null
    manager: "17"
    operation: 鐊唊飙Ş-U圴÷a/ɔ}摁(湗Ć]
  name: "2"
  namespace: "5"
  ownerReferences:
  - apiVersion: "12"
    blockOwnerDeletion: true
    controller: false
    hashkey: -3769286901598778062
    kind: "13"
    name: "14"
    uid: z廔ȇ{sŊƏ
  resourceVersion: "16964250748386560239"
  selfLink: "6"
  tenant: "4"
  uid: ą飋īqJ枊a8衍`Ĩɘ.蘯6ċV夸e
webhooks:
- admissionReviewVersions:
  - "45"
  clientConfig:
    caBundle: RA==
    service:
      name: "28"
      namespace: "27"
      path: "29"
      port: 2114329341
    url: "26"
  failurePolicy: 狞夌碕ʂɭ
  matchPolicy: cP$Iņɖ橙9
  name: "25"
  namespaceSelector:
    matchExpressions:
    - key: p503---477-49p---o61---4fy--9---7--9-9s-0-u5lj2--10pq-0-7-9-2-0/fP81.-.9Vdx.TB_M-H_5_.t..bG0
      operator: In
      values:
      - D07.a_.y_y_o0_5qN2_---_M.N_._a6.9bHjdH.-.5_.I8__n
    matchLabels:
      MHLU..8._bQw.-dG6c-.6--_x.--0wmZk1_8.3: U-_Bq.m_4
  objectSelector:
    matchExpressions:
    - key: 4m-s0833--52-9guv59s-3------6tv27r-m8w-6d/5w9-Wm_AO-l8VKLyHA_.-F_E2_QOuQ_8.-1_57__JR.N-1zL-4--6o-B
      operator: DoesNotExist
    matchLabels:
      81po6c-m6173y.390q-6-i2d020hj--a-8g--z-nt-b-6-17-58-n---5df19/H.__.h-J-M.9_T.q-o7.y-SQ.9A-F-.4--_vLW.jj-.5B.._.5_3-_4.3i: i.Fg.Cs_.8-EA
  rules:
  - apiGroups:
    - "30"
    apiVersions:
    - "31"
    operations:
    - ʕVŚ(ĿȊ甞谐颋ǅSǡƏS$+½H牗
    resources:
    - "32"
    scope: ȎțêɘĲ斬³;Ơ歿
  sideEffects: ŴĿ
  timeoutSeconds: 1525829664
